--- a/app/views/matches/_match_columns.html.haml
+++ b/app/views/matches/_match_columns.html.haml
@@ -6,15 +6,15 @@
 
 %td.score{ :nowrap => 'nowrap' }
   - if sorted_teams.first.score > sorted_teams.last.score
-    = css_image_tag('icons/medal_gold_2.png', :class => 'winner')
+    = css_image_tag('icons/medal_gold_2.png')
   - else
-    = css_image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
+    = css_image_tag('icons/blank.gif')
   
   = sorted_teams.collect(&:score).join(' - ')
   - if sorted_teams.last.score > sorted_teams.first.score
-    = css_image_tag('icons/medal_gold_2.png', :class => 'winner')
+    = css_image_tag('icons/medal_gold_2.png')
   - else
-    = css_image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
+    = css_image_tag('icons/blank.gif')
 
 %td.members
   = link_to css_image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(:game_id => match.game_id, :filter => sorted_teams.last.team_ids)
